--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 /* contenitore principale centrato */
 .wrapper {
-  width: 80%;
+  width: 60%;
   margin: auto;
 }
 /* intestazione */
@@ -26,18 +26,9 @@ img {
   width: 100%;
 
 }
-/* .logo {
-  background-image: url(../img/logo.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-} */
 
 nav {
   margin-top: 20px;
-}
-
-ul {
-
 }
 
 li  {
@@ -56,7 +47,7 @@ a {
 
 /* end intestazione */
 
-/* inizio hero */
+/* hero */
 header, .hero {
   margin-bottom: 25px;
 }
@@ -66,11 +57,48 @@ header, .hero {
   height: 500px;
   background-image: url(../img/banner.jpg);
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
-
   background-color: yellow;
+  border-radius: 15px;
+  position: relative;
+  z-index: 0;
 }
-/* end inizio hero */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  z-index: 1;
+}
+
+.testo-hero {
+  width: 50%;
+  position: absolute;
+  z-index: 2;
+  top: 65%;
+  left: 5%;
+}
+
+h2 {
+  font-size: 22pt;
+  font-weight: 200;
+  color: white;
+}
+
+p {
+  font-size: 12pt;
+  color: white;
+  font-weight: 200;
+}
+
+
+
+/* end hero */
 
 /* sezione centrale  */
 
