--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ h1 {
   /* background-color: lightblue; */
 }
 
-.img-left, .img-center, .img-right {
+.img-left, .img-right {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -135,13 +135,56 @@ h1 {
   height: 200px;
   border-radius: 10px;
   position: relative;
-  z-index: 0;
-
 }
 
+.img-left {
+  background-image: url(../img/img-1.jpg);
+  position: relative;
+}
+.img-left::before {
+  background-color: rgba(0, 0, 0, 0.2);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  border-radius: 15px;
+}
+.img-center {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  position: relative;
+  background-image: url(../img/banner-2.jpg);
+  position: relative;
+}
+.img-center::before {
+  background-color: rgba(0, 0, 0, 0.2);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  border-radius: 15px;
+}
+.img-right {
+  background-image: url(../img/img-3.jpg);
+  position: relative;
+}
+.img-right::before {
+  background-color: rgba(0, 0, 0, 0.2);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  border-radius: 15px;
+}
 .overlay-2 {
   opacity: 0;
-  background-color: grey;
   position: absolute;
   height: 200px;
   width: 100%;
@@ -154,19 +197,10 @@ h1 {
   border-radius: 15px;
 }
 
-.img-left:hover .overlay-2 {
+.img-left:hover .overlay-2, .img-right:hover .overlay-2, .img-center:hover .overlay-2 {
   opacity: 1;
 }
 
-.img-left {
-  background-image: url(../img/img-1.jpg);
-}
-.img-center {
-  background-image: url(../img/banner-2.jpg);
-}
-.img-right {
-  background-image: url(../img/img-3.jpg);
-}
 .col-left {
   float: left;
   width: 25%;
@@ -176,7 +210,7 @@ h1 {
   float: left;
   height: 800px;
   width: 46%;
-  background-color: lightblue;
+  /* background-color: lightblue; */
   margin: 0 2%;
 }
 
