--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ h1 {
 
 .row {
   width: 100%;
-  height: 825px;
 }
 
 .col-left, .col-right {
@@ -210,16 +209,10 @@ h4 {
   font-weight: lighter;
   color: #929292;
 }
-.col-left {
-  float: left;
-  width: 25%;
-}
 
 .col-center {
   float: left;
-  height: 800px;
   width: 46%;
-  /* background-color: lightblue; */
   margin: 0 2%;
 }
 
@@ -232,7 +225,15 @@ h4 {
 
 footer {
   width: 100%;
-  height: 100px;
   margin-top: 15px;
-  background-color: violet;
+}
+
+footer p {
+  padding: 30px 0;
+  text-align: center;
+  font-weight: 200;
+}
+
+footer p span {
+  color: red;
 }
